--- a/atozbtprinterlib/src/main/AndroidManifest.xml
+++ b/atozbtprinterlib/src/main/AndroidManifest.xml
@@ -2,4 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.atozbtprinterlib">
 
+    <application
+        android:allowBackup="true"
+        android:label="@string/app_name"
+        android:supportsRtl="true"
+        android:theme="@style/Theme.AtozBluetoothPrinterLibrary">
+
+        <activity android:name=".ActivityPrinterDevicesDiscovery" />
+
+    </application>
+
 </manifest>
